--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="navibar">
-        <a href="#intro-section"><img id="logo" src="/images/music.jpg" alt="Logo"></a>
+        <a href="#intro-section"><img id="logo" src="music.jpg" alt="Logo"></a>
         <div class="item"><a id="item-1" href="#intro-section">Home</a></div>
         <div class="item"><a id="item-2" href="#featured-playlists">Featured</a></div>
         <div class="item"><a id="item-3" href="#recommended-albums">Recommended</a></div>
@@ -25,7 +25,7 @@
             <button onclick="window.location.href='#featured-playlists'">Explore Featured Playlists</button>
         </div>
         <div class="intro-right">
-            <img src="/images/music.jpg" alt="Music Image">
+            <img src="music.jpg" alt="Music Image">
         </div>
     </div>
     <section class="featured-playlists" id="featured-playlists">
@@ -36,7 +36,7 @@
         <div class="playlist-cards">
             <div class="playlist-card">
                 <div class="card-header">
-                    <img src="/images/chill vibes.jpg" alt="Playlist 1">
+                    <img src="chill vibes.jpg" alt="Playlist 1">
                     <span class="song-count">20 Songs</span>
                 </div>
                 <div class="card-body">
@@ -50,7 +50,7 @@
             </div>
             <div class="playlist-card">
                 <div class="card-header">
-                    <img src="/images/workout mix.jpg" alt="Playlist 2">
+                    <img src="workout mix.jpg" alt="Playlist 2">
                     <span class="song-count">15 Songs</span>
                 </div>
                 <div class="card-body">
@@ -64,7 +64,7 @@
             </div>
             <div class="playlist-card">
                 <div class="card-header">
-                    <img src="/images/top hits.jpg" alt="Playlist 3">
+                    <img src="top hits.jpg" alt="Playlist 3">
                     <span class="song-count">25 Songs</span>
                 </div>
                 <div class="card-body">
@@ -78,7 +78,7 @@
             </div>
             <div class="playlist-card">
                 <div class="card-header">
-                    <img src="/images/deep nostalgia.jpg" alt="Playlist 4">
+                    <img src="deep nostalgia.jpg" alt="Playlist 4">
                     <span class="song-count">18 Songs</span>
                 </div>
                 <div class="card-body">
@@ -101,7 +101,7 @@
         </div>
         <div class="album-cards">
             <div class="album-card">
-                <img src="/images/millennium.jpg" alt="millennium">
+                <img src="millennium.jpg" alt="millennium">
                 <div class="album-title">
                     <h3>Millennium</h3>
                     <p>Backstreet Boys</p>
@@ -109,7 +109,7 @@
                 <button class="know-more">Know More</button>
             </div>
             <div class="album-card">
-                <img src="/images/om shanti om.jpg" alt="om shanti om">
+                <img src="om shanti om.jpg" alt="om shanti om">
                 <div class="album-title">
                     <h3>Om Shanti Om</h3>
                     <p>Vishal-Shekhar</p>
@@ -117,7 +117,7 @@
                 <button class="know-more">Know More</button>
             </div>
             <div class="album-card">
-                <img src="/images/Back in Black.jpg" alt="Back in Black">
+                <img src="Back in Black.jpg" alt="Back in Black">
                 <div class="album-title">
                     <h3>Back in Black</h3>
                     <p>AC/DC</p>
@@ -125,7 +125,7 @@
                 <button class="know-more">Know More</button>
             </div>
             <div class="album-card">
-                <img src="/images/Dil-Se.jpg" alt="Dil Se">
+                <img src="Dil-Se.jpg" alt="Dil Se">
                 <div class="album-title">
                     <h3>Dil Se</h3>
                     <p>A.R. Rahman </p>
@@ -133,7 +133,7 @@
                 <button class="know-more">Know More</button>
             </div>
             <div class="album-card">
-                <img src="/images/Evolve.jpg" alt="Evolve">
+                <img src="Evolve.jpg" alt="Evolve">
                 <div class="album-title">
                     <h3>Evolve</h3>
                     <p>Imagine Dragons</p>
@@ -141,7 +141,7 @@
                 <button class="know-more">Know More</button>
             </div>
             <div class="album-card">
-                <img src="/images/barfi.jpg" alt="Barfi!">
+                <img src="barfi.jpg" alt="Barfi!">
                 <div class="album-title">
                     <h3>Barfi!</h3>
                     <p>Pritam</p>
@@ -156,21 +156,21 @@
         <div class="reviews-submit">
             <div class="reviews-container">
                 <div class="review-card">
-                    <img src="/images/peter parker.jpeg" alt="User 1" class="user-image">
+                    <img src="peter parker.jpeg" alt="User 1" class="user-image">
                     <div class="user-name">Peter Parker</div>
                     <div class="user-review">This product is amazing! It exceeded my expectations and I couldn't be
                         happier</div>
                 </div>
 
                 <div class="review-card">
-                    <img src="/images/peter2.jpg" alt="User 2" class="user-image">
+                    <img src="peter2.jpg" alt="User 2" class="user-image">
                     <div class="user-name">Peter B. Parker</div>
                     <div class="user-review">Great quality and fantastic customer service. I highly recommend this to
                         everyone!</div>
                 </div>
 
                 <div class="review-card">
-                    <img src="/images/peter3.jpg" alt="User 3" class="user-image">
+                    <img src="peter3.jpg" alt="User 3" class="user-image">
                     <div class="user-name">Pavitr Prabakar</div>
                     <div class="user-review">Absolutely love it! The best investment I've made in a long time. Five
                         stars!
@@ -178,7 +178,7 @@
                 </div>
 
                 <div class="review-card">
-                    <img src="/images/may.jpeg" alt="User 3" class="user-image">
+                    <img src="may.jpeg" alt="User 3" class="user-image">
                     <div class="user-name">Maybelle Parker</div>
                     <div class="user-review">Delighted with my purchase! Easily the top investment I've made recently.
                         Full five stars!
